@@ -43,6 +43,8 @@ Version 0.9
 
 - The Lua lexer now recognizes multi-line comments.
 
+- Added a MySQL lexer.
+
 
 Version 0.8.1
 -------------
